<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EasyHealth</string>
    <string name="btnBack">Back to ClientForTrainer</string>
    <string name="Stat">Statistics</string>
    <string name="cal">Calories</string>
    <string name="Wheight">Wheight</string>
    <string name="Breakfast">Breakfast:</string>
    <string name="Dinner">Dinner</string>
    <string name="Lunch">Lunch</string>
    <string name="MkPDiet">Add Personal Diet</string>
    <string name="AddFood">Add Food</string>
    <string name="Chat">Chat</string>
    <string name="nameHint">Name</string>
    <string name="calHint">Cal</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="addImageDescript">Image of food</string>
    <string name="yourClass">Your Classes</string>
    <string name="personalDiet">Personal diet</string>
    <string name="personalDietTrainer">Personal diet Trainer</string>
    <string name="foodClient">Food Client</string>
    <string name="foodTrainer">Food Trainer</string>
    <string name="btnCancel">Button to cancel a Class</string>
    <string name="CliFTrainer">My Clients</string>
    <string name="chatwith">Chat with Trainer</string>

    <string name="title_activity_client_for_trainer">EasyHealth</string>
    <string-array name="monthGraph">
        <item>This month</item>
        <item>3 month ago</item>
        <item>5 month ago</item>
        <item>This year</item>
    </string-array>
    <string-array name="lunchs">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="foods">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string-array name="classesProvisionals">
        <item>Objecte1 estil class_layout</item>
        <item>Objecte2 estil class_layout</item>
        <item>ObjecteX estil class_layout</item>
    </string-array>

    <string-array name="classesperfilclientprovisionals">
        <item>Objecte1 estil class client_layout</item>
        <item>Objecte2 estil class client_layout</item>
        <item>ObjecteX estil class client_layout</item>
    </string-array>



    <string-array name="dietesProvisionals">
        <item>Objecte1 estil food_layout</item>
        <item>Objecte2 estil food_layout</item>
        <item>Objecte3 estil food_layout</item>
    </string-array>



    <string-array name="classAvailability">
        <item>Morning</item>
        <item>Afternoon</item>
    </string-array>

    <string name="CFT_CliName">Michael Adams</string>
    <string name="CFT_CliLocation">None.</string>
    <string name="CFT_CliSubscription">Subscription</string>
    <string name="CFT_CliSubscriptionType">Basic</string>
    <string name="CFT_CliHeight">Height (m)</string>
    <string name="CFT_CliHeightNum">1,84</string>
    <string name="CFT_CliWeight">Weight (kg)</string>
    <string name="CFT_CliWeightNum">83,2</string>
    <string name="CFT_CliMeal">Client Meals</string>
    <string name="CFT_CliMealBF">American Breakfast</string>
    <string name="CFT_CliMealLCH">Rice with Chicken</string>
    <string name="CFT_CliMealAFT">Banana and Coffee</string>
    <string name="CFT_CliMealDIN">Basilicum Salad</string>
    <string name="CFT_TrainingOpt">Training Options</string>
    <string name="CFT_TrainingOptStats">Statistics</string>
    <string name="CFT_TrainingOptChat">Chat with Client</string>
    <string name="CFT_TrainingOptDiet">Personal Diet</string>
    <string name="title_activity_prova">prova</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="AddClient">Add Client Code</string>
    <string name="my_classes">My classes</string>
    <string name="ClientSettings">Settings</string>
    <string name="TrainerSettings">Trainer Settings</string>
    <string name="ClientCode">#8944</string>


    <string name="MT_TrainerProfile">My Profile</string>
    <string name="MT_TrainerName">David Jones</string>
    <string name="MT_ClassesToday">Classes today</string>
    <string name="MT_NumClases">4</string>
    <string name="MT_Messages">Messages</string>
    <string name="MT_NumMessages">16</string>
    <string name="MT_Clients">Clients</string>
    <string name="MT_NumClients">3</string>
    <string name="MT_Cl">Clients</string>
    <string name="MT_C1">Client 1</string>
    <string name="MT_C2">Client 2</string>
    <string name="MT_C3">Client 3</string>
    <string name="MT_C4">Client 4</string>
    <string name="MT_Others">Others</string>
    <string name="SettingsTrainer">Settings</string>

    <string name="MT_YourClasses">Your classes</string>
    <string name="EasyHealth">EASY HEALTH</string>
    <string name="SignUp">Sign Up</string>
    <string name="height">ND</string>
    <string name="weight">ND</string>
    <string name="location">ND</string>
    <string name="availability">ND</string>
    <string name="client_name">Not Defined</string>
    <string name="subscriptionClient">--</string>
    <string name="client_height">--</string>
    <string name="client_weight">--</string>

</resources>
