<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddFood">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtMPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/AddFood"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="#00FFFFFF"
            android:onClick="goback"
            android:contentDescription="@string/btnBack"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/chevron_left" />
        <ImageButton
            android:id="@+id/btnAccept"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:onClick="goback"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btnBack"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/check" />

    </RelativeLayout>

    <Spinner
        android:id="@+id/spinLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/DietSpinner"
        android:entries="@array/foods"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameBreak"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdBreak"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:theme="@style/EditText">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calBreak"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calEdBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/calHint"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:theme="@style/EditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameBreak">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/borde">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/addImageDescript"
            android:scaleType="fitCenter"
            android:tint="@android:color/holo_blue_light"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/btnAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/add_image" />
    </RelativeLayout>




</LinearLayout>