<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientForTrainer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:background="@android:color/holo_blue_light"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtMPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/CliFTrainer"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btnBack"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/chevron_left" />
        <ImageButton
            android:id="@+id/btnAccept"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btnBack"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/check" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btn_ExtraOpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#14FFFFFF"
                android:backgroundTint="#3EFFFFFF"
                android:defaultFocusHighlightEnabled="false"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:tint="@android:color/holo_blue_light"
                app:srcCompat="@android:drawable/btn_default" />

            <ImageView
                android:id="@+id/image_ClientPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_borde"
                android:contextClickable="false"
                tools:srcCompat="@tools:sample/avatars[4]" />

            <TextView
                android:id="@+id/txtClientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/CFT_CliName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="25dp" />ç

            <TextView
                android:id="@+id/txtClientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/CFT_CliLocation"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>